# Language

./: .gitignore  .gitmodules  CMakeLists.txt  MyLanguage.g4  README.md  example.ssl  lexer.cpp  lexer.h  main.cpp  main.sosal  main.sosl  parser.h  run.sh  token.cpp
antlr4-gen/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
antlr4-runtime/grammer/: MyLanguage.g4  MyLanguage.tokens  MyLanguageBaseListener.cpp  MyLanguageBaseListener.h  MyLanguageLexer.cpp  MyLanguageLexer.h  MyLanguageListener.cpp  MyLanguageListener.h  MyLanguageParser.cpp  MyLanguageParser.h
antlr4-runtime/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
benchmarks/: factorial.bytecel  factorial.cel  factorial.sosal  factorial.sosl  hotswap-approve.cel  hotswap-jit-approve.cel  hotswap-jit-reject.cel  hotswap-reject.cel  jit-for-loop-fusion-not.cel  jit-for-loop-fusion.cel  jit-for-loop-unroll.cel  jit-for-loop.cel  jit-if-unroll.cel  main.bytecel  main.cel  main.sosal  main.sosl  main1.cel  primeNumber.bytecel  primeNumber.cel  sort.bytecel  sort.cel
grammer/: ASTBuilder.cpp  ASTNodes.h  MyLanguage.g4  MyLanguage.interp  MyLanguageBaseListener.cpp  MyLanguageBaseListener.h  MyLanguageBaseVisitor.cpp  MyLanguageBaseVisitor.h  MyLanguageLexer.cpp  MyLanguageLexer.h  MyLanguageLexer.interp  MyLanguageLexer.tokens  MyLanguageListener.cpp  MyLanguageListener.h  MyLanguageParser.cpp  MyLanguageParser.h  MyLanguageVisitor.cpp  MyLanguageVisitor.h
grammer/AST/: ASTBuilder.cpp  ASTBuilder.h  ASTNodes.cpp  ASTNodes.h  ASTVisitor.h  CodeGenerator.h
lib/: CMakeLists.txt  compiler.cpp  compiler.h  hotspot.cpp  hotspot.h  instruction.cpp  instruction.h  jit-for-fusion.h  jit-function.cpp  jit-function.h  jit.cpp  jit.h  jit_for_fusion.cpp  jit_for_fusion.h  jit_function.cpp  jit_function.h  lexer.cpp  lexer.h  lib.h  memoryManager.cpp  memoryManager.h  parser.cpp  parser.h  token.cpp  token.h  utils.h  virtualMachine.cpp  virtualMachine.h
