add_library(Language
    compiler.cpp
    compiler.h
    instruction.h
    instruction.cpp
    jit.h
    jit.cpp
    hotspot.h
    hotspot.cpp
    lexer.cpp
    lexer.h
    lib.h
    memoryManager.cpp
    memoryManager.h
    parser.cpp
    parser.h
    token.cpp
    token.h
    virtualMachine.cpp
    virtualMachine.h)